# rmc

./: .gitignore  BipolarNightmare.wav.RPP  DoEncodeDecode.py  README.md  README_TD.md  TD.py  audiofile.py  baseline.py  bitalloc.py  bitpack.py  blockswitching.py  cascade_formula_variants.md  codec.py  codec_old.py  coded.pac  coded_128k.pac  coded_192k.pac  entropy.py  environment.yaml  features.py  get_best_region.py  layout_test.py  mdct.py  pacbfile.py  pacfile.py  pcmfile.py  prediction.py  prepare_materials.py  psychoac.py  pyproject.toml  quantize.py  requirements.txt  rmcfile.py  sdgplot.py  search.py  simple_run.py  spe.py  td_spe.py  test.py  test_spe.py  (+2 more)
Backups/: BipolarNightmare.wav-2026-03-10_003828.rpp-bak
TransientDetction/: README.md  __init__.py
TransientDetction/src/: TD.py
TransientDetction/test/: simple_run.py  test.py
