[project]
name = "rmc"
version = "0.1.0"
description = "Rhythmic Music Coder"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "llvmlite==0.45.0",
    "madmom @ git+https://github.com/CPJKU/madmom.git@27f032e8947204902c675e5e341a3faf5dc86dae",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=2",
    "scipy>=1.16.3",
    "tqdm>=4.67.3",
]

[tool.uv.extra-build-dependencies]
madmom = ["Cython", "numpy"]
